--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = walkway
-version = 0.0.1
+version = 0.0.3
 author = Leo Molina
 author_email = leonardomt@gmail.com
 description = Motion detector for a narrow runway
@@ -23,7 +23,7 @@ classifiers =
 package_dir =
     = src
 packages = find:
-python_requires = >=3.8
+python_requires = >=3.8, <3.9
 install_requires =
 	spinnaker-python
 	opencv-python
