--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = walkway
-version = 0.0.7
+version = 0.0.8
 author = Leo Molina
 author_email = leonardomt@gmail.com
 description = Motion detector for a narrow runway
@@ -25,9 +25,12 @@ package_dir =
 packages = find:
 python_requires = >=3.8
 install_requires =
-	spinnaker-python
-	opencv-python
 	numpy
+	opencv-python
+	PyQt5
+	sounddevice
+	soundfile
+	spinnaker-python
 
 [options.packages.find]
 where = src
